--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -102,6 +102,8 @@ $breakpoints : (small:(min-width: $sm,
   transition: none !important;
 }
 
+html { height: 100%; }
+
 html,
 body {
   background-color: $main-background-color;
@@ -1851,8 +1853,9 @@ a {
     &__set-box {
       border: 1px solid #e3e3e3;
       border-radius: .375rem;
-      display: flex;
-      flex-direction: column;
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+      grid-template-rows: repeat(3,1fr);
       padding: 0.75rem;
       margin-bottom: 0.75rem;
 
@@ -1865,6 +1868,8 @@ a {
         margin-top: 0;
         margin-bottom: 0.75rem;
         text-align: left;
+        grid-column: 1/3;
+        grid-row: 1;
       }
 
       h3>a {
@@ -1890,6 +1895,8 @@ a {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        grid-column: 1/3;
+        grid-row: 2;
 
         img {
           height: 4rem;
@@ -1901,6 +1908,8 @@ a {
         display: flex;
         justify-content: space-between;
         margin-top: 0.75rem;
+        grid-column: 1/3;
+        grid-row: 3;
       }
     }
   }
