--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,4 @@
+@use "sass:map";
 /* COLORS */
 $nayeon-color: #49c0ec;
 $jeongyeon-color: #a3cc54;
@@ -81,11 +82,11 @@ $breakpoints : (small:(min-width: $sm,
     ratio: 1.6));
 
 @each $key, $value in $breakpoints {
-  @media screen and (min-width: map-get($value, 'min-width')) {
+  @media screen and (min-width: map.get($value, 'min-width')) {
     [class$='-container'] {
       margin-left: auto;
       margin-right: auto;
-      max-width: calc(100% / map-get($value, 'ratio'));
+      max-width: calc(100% / map.get($value, 'ratio'));
 
     }
   }
@@ -102,7 +103,7 @@ $breakpoints : (small:(min-width: $sm,
 
   @each $key, $value in $members {
     .circle_#{$key} {
-      color: map-get($value, 'color');
+      color: map.get($value, 'color');
     }
   }
 }
